[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocessing"
version = "0.1.0"
description = "Universal preprocessing and quality evaluation pipeline for ML datasets"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "charset-normalizer>=3.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
